# phase-V-Advanced-Cloud-Deployment

./: README.md  TODO.md
.github/workflows/: README.md  build.yaml  deploy.yaml
.specify/memory/: constitution.md
backend/: README.md  pyproject.toml
backend/alembic/versions/: 4d140a8bbf65_add_password_reset_tokens_table.py  e1e327b9eb1b_add_email_column_to_password_reset_.py  phase5_add_task_enhancements.py
backend/src/api/: health.py  tasks.py
backend/src/core/: config.py
backend/src/mcp/: tools.py
backend/src/models/: __init__.py  tag.py  task.py
backend/src/services/: email.py  tasks.py
backend/src/services/events/: __init__.py  publisher.py  schemas.py
backend/src/utils/: __init__.py  date_parser.py
dapr/components/: kafka-pubsub-cloud.yaml  kafka-pubsub.yaml  secrets.yaml  statestore.yaml  subscription-reminders.yaml  subscription-task-events.yaml
docs/: PHASE-5-DEPLOYMENT.md
frontend/: README.md  package-lock.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ChatInterface.tsx
frontend/src/lib/: api.ts
helm/charts/backend/: Chart.yaml  values.yaml
helm/charts/frontend/: Chart.yaml  values.yaml
helm/charts/notification-service/: Chart.yaml  values.yaml
helm/charts/recurring-service/: Chart.yaml  values.yaml
helm/taskai/: Chart.yaml
helm/todo-chatbot/: Chart.yaml  values-minikube.yaml  values-production.yaml  values-staging.yaml  values.yaml
history/prompts/004-phase5-cloud-deployment/: 001-phase5-specification-creation.spec.prompt.md  002-phase5-implementation-planning.plan.prompt.md  003-phase5-task-generation.tasks.prompt.md  004-phase5-implementation-execution.implement.prompt.md
infra/minikube/: kafka-cluster.yaml
notification-service/: Dockerfile  pyproject.toml
notification-service/src/: __init__.py  main.py
notification-service/src/api/: __init__.py  health.py  reminders.py
notification-service/src/core/: __init__.py  config.py  logging.py
notification-service/src/handlers/: __init__.py  reminder_handler.py
recurring-service/: Dockerfile  pyproject.toml
recurring-service/src/: __init__.py  main.py
recurring-service/src/api/: __init__.py  events.py  health.py
recurring-service/src/core/: __init__.py  config.py  logging.py
recurring-service/src/handlers/: __init__.py  task_completion_handler.py
recurring-service/src/services/: __init__.py  backend_client.py  recurrence.py
scripts/: deploy-minikube.ps1  e2e-test.ps1  verify-deployment.ps1
specs/: speckit.constitution  speckit.plan  speckit.specify  speckit.tasks
specs/004-phase5-cloud-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-phase5-cloud-deployment/checklists/: requirements.md
(+25 files in other folders)
