[project]
name = "todo-backend"
version = "1.0.0"
description = "Todo Full-Stack Web Application - Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "sqlmodel>=0.0.14",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.40.0",
    "openai-agents>=0.1.0",
    "mcp>=1.0.0",
    "resend>=2.19.0",
    # Phase 5 additions
    "httpx>=0.26.0",  # T010: Dapr HTTP calls
    "dateparser>=1.2.0",  # T009: Natural language date parsing
    "structlog>=24.1.0",  # R-010: Structured JSON logging
    "apscheduler>=3.10.0",  # R-006: Background reminder scheduling
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "pytest-asyncio>=0.21.0",
]
